Update README to configure settings required modern version of JavaFX, which has been provided separately from JDK.